--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/native": "^5.9.3",
     "expo": "~40.0.0",
+    "expo-av": "~8.7.0",
+    "expo-file-system": "~9.3.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-screens": "^2.18.1",
+    "react-native-web": "~0.13.12",
+    "react-native-ytdl": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
